I don't even remember what this commit's about I've been debugging for so long

--- a/clockwork-frontend/app.json
+++ b/clockwork-frontend/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "clockwork-frontend",
     "slug": "clockwork-frontend",
-    "scheme":"clockwork",
+    "scheme": "clockwork",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,13 +22,20 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.clockworkfrontend"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "07c55a90-9bb9-425b-9462-16dd31d9a813"
+      }
+    }
   }
 }
