--- a/clockwork-frontend/package.json
+++ b/clockwork-frontend/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,18 +13,25 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.32",
     "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
     "expo-haptics": "^15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.16",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~6.0.22",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
+    "@react-native/metro-config": "^0.83.1",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
