--- a/clockwork-frontend/app.json
+++ b/clockwork-frontend/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "clockwork-frontend",
+    "name": "Clockwork Frontend",
     "slug": "clockwork-frontend",
     "scheme": "clockwork",
     "version": "1.0.0",
@@ -14,22 +14,24 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.clockworkfrontend"
     },
     "android": {
+      "package": "com.anonymous.clockworkfrontend",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.clockworkfrontend"
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-notifications"
     ],
     "extra": {
       "router": {},
